@@ -666,7 +666,7 @@ remind(1), rise(1)</td></table>
 <tr valign="top" align="left">
 <td width="10%"></td><td width="90%">
 The latest version of the code will be available from
-http://sourceforge.net/projects/hebcal</td></table>
+https://github.com/mjradwin/hebcal</td></table>
 
 <table width="100%" border=0 rules="none" frame="void"
        cols="2" cellspacing="0" cellpadding="0">
