@@ -1,7 +1,7 @@
 /* Copyright(c) 1994  Danny Sadinoff
    Portions Copyright (c) 2002 Michael J. Radwin. All Rights Reserved.
 
-   http://sourceforge.net/projects/hebcal
+   https://github.com/mjradwin/hebcal
 
   See section COPYING for conditions for redistribution
 */
